FE-adding custom scrollbar to all scroll over flow cases, other changes to fix styles error

--- a/pages/scss/custom.scss
+++ b/pages/scss/custom.scss
@@ -217,4 +217,5 @@ a{
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color:var(--bs-info);
   border-radius: 100px;
+  border: 3px solid var(--bs-light);;
 }
